add hermiT dependency

--- a/sansa-ml/sansa-ml-spark/pom.xml
+++ b/sansa-ml/sansa-ml-spark/pom.xml
@@ -112,11 +112,22 @@
 			<artifactId>scopt_${scala.binary.version}</artifactId>
 		</dependency>
 
-		<!-- Isolation Forest -->
+		<!--HermiT-->
 		<dependency>
-			<groupId>com.linkedin.isolation-forest</groupId>
-			<artifactId>isolation-forest_3.0.0_2.12</artifactId>
-			<version>2.0.4</version>
+			<groupId>net.sourceforge.owlapi</groupId>
+			<artifactId>org.semanticweb.hermit</artifactId>
+			<version>1.4.5.519</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.codehaus.woodstox</groupId>
+					<artifactId>woodstox-core-asl</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>net.sourceforge.owlapi</groupId>
+					<artifactId>owlapi-distribution</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 	</dependencies>
