--- a/sansa-rdf/sansa-rdf-spark/pom.xml
+++ b/sansa-rdf/sansa-rdf-spark/pom.xml
@@ -59,6 +59,11 @@
 			<artifactId>paranamer</artifactId>
 		</dependency>
 		-->
+		<dependency>
+			<groupId>org.aksw.jena-sparql-api</groupId>
+			<artifactId>jena-sparql-api-mapper-annotations</artifactId>
+			<version>3.17.0-1</version>
+		</dependency>
 
 		<dependency>
             <groupId>it.unimi.dsi</groupId>
