Upgrade to jena 4.4.0

--- a/sansa-spark-jena-java/pom.xml
+++ b/sansa-spark-jena-java/pom.xml
@@ -53,8 +53,8 @@
         </dependency>
 
         <dependency>
-            <groupId>net.sansa-stack</groupId>
-            <artifactId>sansa-kryo-jena</artifactId>
+            <groupId>org.aksw.jenax</groupId>
+            <artifactId>jenax-io-kryo</artifactId>
         </dependency>
 
 
