--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,8 @@
 
         <!-- Our util projects (mainly maintained by Claus) -->
         <aksw-commons.version>0.9.1-SNAPSHOT</aksw-commons.version>
-        <jena.version>4.3.2</jena.version>
-        <jsa.version>4.3.2-1-SNAPSHOT</jsa.version>
+        <jena.version>4.4.0</jena.version>
+        <jsa.version>4.4.0-1-SNAPSHOT</jsa.version>
         <r2rml-jena-api.version>0.9.1-SNAPSHOT</r2rml-jena-api.version>
 
         <rdf4j.version>3.3.0</rdf4j.version>
@@ -116,7 +116,6 @@
 
     <modules>
         <module>sansa-hadoop-jena</module>
-        <module>sansa-kryo-jena</module>
         <module>sansa-spark-jena-java</module>
 
         <module>sansa-test-resources</module>
@@ -187,9 +186,9 @@
             </dependency>
 
             <dependency>
-                <groupId>net.sansa-stack</groupId>
-                <artifactId>sansa-kryo-jena</artifactId>
-                <version>${project.version}</version>
+                <groupId>org.aksw.jenax</groupId>
+                <artifactId>jenax-io-kryo</artifactId>
+                <version>${jsa.version}</version>
             </dependency>
 
             <dependency>
