--- a/sansa-rdf/sansa-rdf-common/pom.xml
+++ b/sansa-rdf/sansa-rdf-common/pom.xml
@@ -16,8 +16,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>net.sansa-stack</groupId>
-			<artifactId>sansa-kryo-jena</artifactId>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-io-kryo</artifactId>
 		</dependency>
 
 		<dependency>
