--- a/pom.xml
+++ b/pom.xml
@@ -72,9 +72,9 @@
         <hadoop.common.version>${hadoop.version}</hadoop.common.version>
 
         <!-- Our util projects (mainly maintained by Claus) -->
-        <aksw-commons.version>0.9.1-SNAPSHOT</aksw-commons.version>
-        <jena.version>4.4.0</jena.version>
-        <jsa.version>4.4.0-1-SNAPSHOT</jsa.version>
+        <aksw-commons.version>0.9.3-SNAPSHOT</aksw-commons.version>
+        <jena.version>4.5.0-SNAPSHOT</jena.version>
+        <jsa.version>4.5.0-1-SNAPSHOT</jsa.version>
         <r2rml-jena-api.version>0.9.1-SNAPSHOT</r2rml-jena-api.version>
 
         <rdf4j.version>3.3.0</rdf4j.version>
