--- a/sansa-integration-tests/pom.xml
+++ b/sansa-integration-tests/pom.xml
@@ -44,10 +44,18 @@
             <scope>test</scope>
         </dependency>
 
+        <!--
+        <dependency>
+            <groupId>net.sansa-stack</groupId>
+            <artifactId>sansa-test-resources_2.12</artifactId>
+            <scope>test</scope>
+        </dependency>
+        -->
+
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
-            <version>1.15.1</version>
+            <version>1.16.3</version>
             <scope>test</scope>
         </dependency>
 
