--- a/sansa-integration-tests/src/test/resources/docker-compose.yml
+++ b/sansa-integration-tests/src/test/resources/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 
 services:
   spark-master:
-    image: bde2020/spark-master:3.0.1-hadoop3.2
+    image: bde2020/spark-master:3.1.1-hadoop3.2-java11
 #    container_name: spark-master
     ports:
       - "7541:8080"
@@ -14,7 +14,7 @@ services:
       - "constraint:node==master"
 
   spark-worker-1:
-    image: bde2020/spark-worker:3.0.1-hadoop3.2
+    image: bde2020/spark-worker:3.1.1-hadoop3.2-java11
 #    container_name: spark-worker-1
     depends_on:
       - spark-master
@@ -27,7 +27,7 @@ services:
       - "constraint:node==worker-1"
 
   spark-worker-2:
-    image: bde2020/spark-worker:3.0.1-hadoop3.2
+    image: bde2020/spark-worker:3.1.1-hadoop3.2-java11
 #    container_name: spark-worker-2
     depends_on:
       - spark-master
