--- a/sansa-query/sansa-query-spark/pom.xml
+++ b/sansa-query/sansa-query-spark/pom.xml
@@ -222,7 +222,7 @@
 
         <!-- Ontop -->
         <dependency>
-            <groupId>it.unibz.inf.ontop</groupId>
+            <groupId>net.sansa-stack.thirdparty.it.unibz.inf.ontop</groupId>
             <artifactId>ontop-owlapi</artifactId>
             <exclusions>
                 <exclusion>
@@ -232,7 +232,7 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>it.unibz.inf.ontop</groupId>
+            <groupId>net.sansa-stack.thirdparty.it.unibz.inf.ontop</groupId>
             <artifactId>ontop-system-sql-owlapi</artifactId>
             <exclusions>
                 <exclusion>
@@ -242,7 +242,7 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>it.unibz.inf.ontop</groupId>
+            <groupId>net.sansa-stack.thirdparty.it.unibz.inf.ontop</groupId>
             <artifactId>ontop-rdb</artifactId>
             <!--
                         <exclusions>
