--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
 
         <owlapi.version>5.1.17</owlapi.version>
 
-        <ontop.version>4.3.0-SNAPSHOT</ontop.version>
+        <ontop.version>4.3.0-1</ontop.version>
 
         <guava.version>30.1-jre</guava.version>
         <!--        <guava.version>14.0.1</guava.version>-->
@@ -1729,6 +1729,17 @@
                     </executions>
                 </plugin>
 
+		<!-- This plugin was last released 2011 - does anything depend on it? -->
+		<plugin>
+			                <groupId>org.scala-tools</groupId>
+                <artifactId>maven-scala-plugin</artifactId>
+		<version>2.15.2</version>
+		<configuration>
+                    <scalaVersion>${scala.version}</scalaVersion>
+                </configuration>
+            </plugin>
+
+
                 <!-- <plugin> -->
                 <!-- <groupId>org.scalatest</groupId> -->
                 <!-- <artifactId>scalatest-maven-plugin</artifactId> -->
@@ -1758,6 +1769,24 @@
                 <!-- </execution> -->
                 <!-- </executions> -->
                 <!-- </plugin> -->
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                     <artifactId>maven-deploy-plugin</artifactId>
+			<version>3.0.0-M2</version>
+                </plugin>
+		<plugin>
+			<groupId>org.sonatype.plugins</groupId>
+                                <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.6.12</version>
+                </plugin>
+                        <plugin>
+                                <groupId>de.dentrassi.maven</groupId>
+                                <artifactId>rpm</artifactId>
+                                <version>1.8.0</version>
+                                <extensions>true</extensions>
+                        </plugin>
+
 
                 <!-- Gitflow -->
                 <plugin>
