--- a/pom.xml
+++ b/pom.xml
@@ -73,9 +73,9 @@
 
         <!-- Our util projects (mainly maintained by Claus) -->
         <aksw-commons.version>0.9.3-SNAPSHOT</aksw-commons.version>
-        <jena.version>4.5.0-SNAPSHOT</jena.version>
-        <jsa.version>4.5.0-1-SNAPSHOT</jsa.version>
-        <r2rml-jena-api.version>0.9.1-SNAPSHOT</r2rml-jena-api.version>
+        <jena.version>4.4.0</jena.version>
+        <jsa.version>4.4.0-2</jsa.version>
+        <r2rml-jena-api.version>0.9.2</r2rml-jena-api.version>
 
         <rdf4j.version>3.3.0</rdf4j.version>
 
@@ -99,7 +99,7 @@
 
         <owlapi.version>5.1.17</owlapi.version>
 
-        <ontop.version>4.3.0-1</ontop.version>
+        <ontop.version>4.3.0-2</ontop.version>
 
         <guava.version>30.1-jre</guava.version>
         <!--        <guava.version>14.0.1</guava.version>-->
