--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
         <hadoop.common.version>${hadoop.version}</hadoop.common.version>
 
         <!-- Our util projects (mainly maintained by Claus) -->
-        <aksw-commons.version>0.9.3-SNAPSHOT</aksw-commons.version>
+        <aksw-commons.version>0.9.3</aksw-commons.version>
         <jena.version>4.4.0</jena.version>
         <jsa.version>4.4.0-2</jsa.version>
         <r2rml-jena-api.version>0.9.2</r2rml-jena-api.version>
@@ -100,6 +100,7 @@
         <owlapi.version>5.1.17</owlapi.version>
 
         <ontop.version>4.3.0-2</ontop.version>
+	<sparqlify.version>0.9.1</sparqlify.version>
 
         <guava.version>30.1-jre</guava.version>
         <!--        <guava.version>14.0.1</guava.version>-->
@@ -1042,7 +1043,7 @@
             <dependency>
                 <groupId>org.aksw.sparqlify</groupId>
                 <artifactId>sparqlify-core</artifactId>
-                <version>0.9.1-SNAPSHOT</version>
+		<version>${sparqlify.version}</version>
                 <exclusions>
                     <!-- <exclusion> <groupId>cglib</groupId> <artifactId>cglib</artifactId>
                         </exclusion> -->
@@ -1237,10 +1238,9 @@
             <dependency>
                 <groupId>org.aksw.bsbm</groupId>
                 <artifactId>bsbm-core</artifactId>
-                <version>3.1.6-SNAPSHOT</version>
+                <version>3.1.6</version>
                 <scope>test</scope>
             </dependency>
-
 
             <dependency>
                 <groupId>junit</groupId>
