--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>net.sansa-stack</groupId>
     <artifactId>sansa-parent_2.12</artifactId>
-    <version>0.8.0-RC3-SNAPSHOT</version>
+    <version>0.8.0-RC3</version>
     <packaging>pom</packaging>
     <name>SANSA - Parent</name>
 
