--- a/sansa-owl/sansa-owl-spark/pom.xml
+++ b/sansa-owl/sansa-owl-spark/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>net.sansa-stack</groupId>
         <artifactId>sansa-owl-parent_2.12</artifactId>
-        <version>0.8.0-RC3-SNAPSHOT</version>
+        <version>0.8.0-RC3</version>
     </parent>
 
     <artifactId>sansa-owl-spark_2.12</artifactId>
