--- a/sansa-pkg-parent/sansa-pkg-uberjar-cli/pom.xml
+++ b/sansa-pkg-parent/sansa-pkg-uberjar-cli/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
   	    <groupId>net.sansa-stack</groupId>
     	<artifactId>sansa-pkg-parent_2.12</artifactId>
-	    <version>0.8.0-RC3-SNAPSHOT</version>
+	    <version>0.8.0-RC3</version>
 	</parent>
 
 	<artifactId>sansa-pkg-uberjar-cli_2.12</artifactId>
