--- a/sansa-query/sansa-query-spark/src/main/resources/ontop-spark.properties
+++ b/sansa-query/sansa-query-spark/src/main/resources/ontop-spark.properties
@@ -7,6 +7,8 @@ it.unibz.inf.ontop.generation.serializer.SelectFromWhereSerializer = net.sansa_s
 it.unibz.inf.ontop.model.type.DBTypeFactory = net.sansa_stack.query.spark.ontop.SparkDBTypeFactory
 it.unibz.inf.ontop.model.term.functionsymbol.db.DBFunctionSymbolFactory = net.sansa_stack.query.spark.ontop.SparkSQLDBFunctionSymbolFactory
 it.unibz.inf.ontop.answering.reformulation.unfolding.QueryUnfolder = net.sansa_stack.query.spark.ontop.SparkQueryUnfolder
+#it.unibz.inf.ontop.generation.serializer.SelectFromWhereSerializer = it.unibz.inf.ontop.generation.serializer.impl.SparkSQLSelectFromWhereSerializer
+
 com.mysql.jdbc.Driver-metadataProvider = it.unibz.inf.ontop.dbschema.impl.MySQLDBMetadataProvider
 it.unibz.inf.ontop.spec.dbschema.tools.DBMetadataExtractorAndSerializer = it.unibz.inf.ontop.spec.dbschema.tools.impl.RDBMetadataExtractorAndSerializerImpl
 it.unibz.inf.ontop.spec.mapping.pp.impl.MetaMappingExpander = net.sansa_stack.query.spark.ontop.MetaMappingExpanderSilent
