--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
 
         <owlapi.version>5.1.17</owlapi.version>
 
-        <ontop.version>4.3.0-1</ontop.version>
+        <ontop.version>4.3.0-2-SNAPSHOT</ontop.version>
 
         <guava.version>30.1-jre</guava.version>
         <!--        <guava.version>14.0.1</guava.version>-->
