--- a/sansa-hadoop-jena/pom.xml
+++ b/sansa-hadoop-jena/pom.xml
@@ -13,27 +13,12 @@
     <artifactId>sansa-hadoop-jena</artifactId>
     <packaging>jar</packaging>
 
-    <!--
-        <properties>
-            <timestamp>${maven.build.timestamp}</timestamp>
-            <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
-        </properties>
-    -->
-    <!--
-        <build>
-            <resources>
-                <resource>
-                    <directory>src/main/resources</directory>
-                </resource>
-                <resource>
-                    <directory>src/main/resources-filtered</directory>
-                    <filtering>true</filtering>
-                </resource>
-            </resources>
-        </build>
-    -->
-
     <dependencies>
+        <!-- TODO Get rid of this dep; our build setup with the globally configured scala/scaladocs plugin fails without scala being present-->
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+	    <artifactId>scala-library</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
