--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -25,7 +25,8 @@ gh_edit_source: "docs" # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
 
 
-remote_theme: carlosperate/jekyll-theme-rtd
+# remote_theme: carlosperate/jekyll-theme-rtd
+repo_url: 'https://github.com/carlosperate/jekyll-theme-rtd'
 
 edit_on_github: true
 github_docs_folder: false
