logo and syntax highlighting

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -33,4 +33,4 @@ github_docs_folder: false
 sticky_navigation: true
 prev_next_buttons_location: both
 search_enabled: true
-hljs_style: github-gist
+hljs_style: github
