--- a/pom.xml
+++ b/pom.xml
@@ -73,9 +73,9 @@
 
         <!-- Our util projects (mainly maintained by Claus) -->
         <aksw-commons.version>0.9.3</aksw-commons.version>
-        <jena.version>4.4.0</jena.version>
-        <jsa.version>4.4.0-2</jsa.version>
-        <r2rml-jena-api.version>0.9.2</r2rml-jena-api.version>
+        <jena.version>4.5.0</jena.version>
+        <jenax.version>4.5.0-1-SNAPSHOT</jenax.version>
+        <r2rml-jena-api.version>0.9.3-SNAPSHOT</r2rml-jena-api.version>
 
         <rdf4j.version>3.3.0</rdf4j.version>
 
@@ -191,12 +191,6 @@
                 <groupId>net.sansa-stack</groupId>
                 <artifactId>sansa-test-resources_${scala.binary.version}</artifactId>
                 <version>${project.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.aksw.jenax</groupId>
-                <artifactId>jenax-io-kryo</artifactId>
-                <version>${jsa.version}</version>
             </dependency>
 
             <dependency>
@@ -374,38 +368,6 @@
                 <version>0.13.0</version>
             </dependency>
 
-            <!-- Attempt to use hdt instead of thrift -->
-            <dependency>
-                <groupId>org.aksw.jenax</groupId>
-                <artifactId>jenax-arq-hdt</artifactId>
-                <version>${jsa.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.aksw.jenax</groupId>
-                <artifactId>jenax-arq-utils</artifactId>
-                <version>${jsa.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.aksw.jenax</groupId>
-                <artifactId>jenax-arq-relations</artifactId>
-                <version>${jsa.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.aksw.jenax</groupId>
-                <artifactId>jenax-arq-datasets-orderaware</artifactId>
-                <version>${jsa.version}</version>
-            </dependency>
-
-            <!-- Experimental model extensions; may be dropped if not useful -->
-            <dependency>
-                <groupId>org.aksw.jenax</groupId>
-                <artifactId>jenax-arq-rdfnode-in-dataset</artifactId>
-                <version>${jsa.version}</version>
-            </dependency>
-
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
@@ -467,25 +429,6 @@
                 <version>${aksw-commons.version}</version>
             </dependency>
 
-            <!-- web server component for use with sparqlify in sansa-query -->
-            <dependency>
-                <groupId>org.aksw.jenax</groupId>
-                <artifactId>jenax-server-standalone</artifactId>
-                <version>${jsa.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>com.sun.xml.bind</groupId>
-                        <artifactId>jaxb-impl</artifactId>
-                    </exclusion>
-
-                    <!-- <exclusion> <groupId>xml-apis</groupId> <artifactId>xml-apis</artifactId>
-                        </exclusion> <exclusion> <groupId>org.eclipse.jetty</groupId> <artifactId>jetty-xml</artifactId>
-                        </exclusion> -->
-                </exclusions>
-                <!-- <classifier>${scala.compat.version}</classifier> -->
-            </dependency>
-
-
             <!-- CSVW Bindings for univocity (hadoop) and our CLI -->
             <dependency>
                 <groupId>org.aksw.commons</groupId>
@@ -514,6 +457,49 @@
 
 
             <!-- jenax -->
+             <dependency>
+                <groupId>org.aksw.jenax</groupId>
+                <artifactId>jenax-bom</artifactId>
+                <version>${jenax.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!-- web server component for use with sparqlify in sansa-query -->
+            <dependency>
+                <groupId>org.aksw.jenax</groupId>
+                <artifactId>jenax-server-standalone</artifactId>
+                <version>${jenax.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.sun.xml.bind</groupId>
+                        <artifactId>jaxb-impl</artifactId>
+                    </exclusion>
+
+                    <!-- <exclusion> <groupId>xml-apis</groupId> <artifactId>xml-apis</artifactId>
+                        </exclusion> <exclusion> <groupId>org.eclipse.jetty</groupId> <artifactId>jetty-xml</artifactId>
+                        </exclusion> -->
+                </exclusions>
+                <!-- <classifier>${scala.compat.version}</classifier> -->
+            </dependency>
+
+            <!-- Attempt to use hdt instead of thrift -->
+            <!--
+            <dependency>
+                <groupId>org.aksw.jenax</groupId>
+                <artifactId>jenax-arq-hdt</artifactId>
+            </dependency>
+            -->
+
+            <!-- Experimental model extensions; may be dropped if not useful -->
+            <!--
+            <dependency>
+                <groupId>org.aksw.jenax</groupId>
+                <artifactId>jenax-arq-rdfnode-in-dataset</artifactId>
+                <version>${jsa.version}</version>
+            </dependency>
+            -->
+
             <!--
             <dependency>
                 <groupId>org.aksw.jenax</groupId>
@@ -524,17 +510,14 @@
 
             <!-- rxjava ideomatic SPARQL fluents
                  Similar to Java8 Streams but with resource management and back pressure handling  -->
+                 <!--
             <dependency>
                 <groupId>org.aksw.jenax</groupId>
                 <artifactId>jenax-arq-rx</artifactId>
                 <version>${jsa.version}</version>
             </dependency>
+            -->
 
-            <dependency>
-                <groupId>org.aksw.jenax</groupId>
-                <artifactId>jenax-rx-dataaccess</artifactId>
-                <version>${jsa.version}</version>
-            </dependency>
 
             <!--
                         <dependency>
@@ -545,25 +528,31 @@
             -->
 
             <!-- Io package; used for the distributed trig reader hadoop plugin -->
+            <!--
             <dependency>
                 <groupId>org.aksw.jenax</groupId>
                 <artifactId>jenax-io-core</artifactId>
                 <version>${jsa.version}</version>
             </dependency>
+            -->
 
             <!-- Annotations for auto-generating implementations of custom Jena Resources -->
+            <!--
             <dependency>
                 <groupId>org.aksw.jenax</groupId>
                 <artifactId>jenax-annotations-reprogen</artifactId>
                 <version>${jsa.version}</version>
             </dependency>
+            -->
 
             <!-- The annotation processor that auto-generates implementations of custom Jena Resources -->
+            <!--
             <dependency>
                 <groupId>org.aksw.jenax</groupId>
                 <artifactId>jenax-reprogen-core</artifactId>
                 <version>${jsa.version}</version>
             </dependency>
+            -->
 
             <!-- Legacy dependency; mainly used because of a dedicated HealthCheck runner for SPARQL endpoints
             TODO Mark for removal -->
@@ -576,18 +565,20 @@
             -->
 
             <!-- Algebra and query optimization package; features transformers not part of jena -->
+            <!--
             <dependency>
                 <groupId>org.aksw.jenax</groupId>
                 <artifactId>jenax-arq-algebra</artifactId>
                 <version>${jsa.version}</version>
                 <exclusions>
-                    <!-- Conflict with ontop's ancient jgrapht version; since jgrapht 1.2 most subclasses of Graph (such as DirectedGraph) were removed in favor of a capabilites pattern; more drastice changes happened with 1.3 -->
+                    <! - - Conflict with ontop's ancient jgrapht version; since jgrapht 1.2 most subclasses of Graph (such as DirectedGraph) were removed in favor of a capabilites pattern; more drastice changes happened with 1.3 - - >
                     <exclusion>
                         <groupId>org.jgrapht</groupId>
                         <artifactId>jgrapht-core</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
+            -->
 
             <!--
                         <dependency>
@@ -599,11 +590,13 @@
 
             <!-- Used for result set analysis such as used datatypes and prefixs -->
             <!-- Parallelizable aggregation builder framework + tuple/binding analysers -->
+            <!--
             <dependency>
                 <groupId>org.aksw.jenax</groupId>
                 <artifactId>jenax-analytics-core</artifactId>
                 <version>${jsa.version}</version>
             </dependency>
+            -->
 
 
             <!-- Mighty command line parsing framework -->
@@ -1592,7 +1585,7 @@
                 <plugin>
                     <groupId>net.alchim31.maven</groupId>
                     <artifactId>scala-maven-plugin</artifactId>
-                    <version>4.5.3</version>
+                    <version>4.6.2</version>
                     <configuration>
                         <forceAggregate>true</forceAggregate>
                         <aggregateDirectOnly>false</aggregateDirectOnly>
