--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,8 @@
 
         <!-- Our util projects (mainly maintained by Claus) -->
         <aksw-commons.version>0.9.3</aksw-commons.version>
-        <jena.version>4.5.0</jena.version>
-        <jenax.version>4.5.0-1-SNAPSHOT</jenax.version>
+        <jena.version>4.6.0-SNAPSHOT</jena.version>
+        <jenax.version>4.6.0-1-SNAPSHOT</jenax.version>
         <r2rml-jena-api.version>0.9.3-SNAPSHOT</r2rml-jena-api.version>
 
         <rdf4j.version>3.3.0</rdf4j.version>
