--- a/sansa-spark-cli/src/main/resources/log4j2.properties
+++ b/sansa-spark-cli/src/main/resources/log4j2.properties
@@ -7,7 +7,7 @@ appender.console.target = SYSTEM_ERR
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = [%p] %m%n
 
-rootLogger.level = debug
+rootLogger.level = info
 rootLogger.appenderRef.stderr.ref = STDERR
 
 logger.jetty.name = org.eclipse.jetty
