Integration tests working again after adding jersey-bom; fixed resource leak in RecordReaderGenericBase

--- a/sansa-hadoop-jena/pom.xml
+++ b/sansa-hadoop-jena/pom.xml
@@ -14,22 +14,22 @@
     <packaging>jar</packaging>
 
     <build>
-	    <plugins>
-		    <plugin>
-                    <groupId>net.alchim31.maven</groupId>
-		    <artifactId>scala-maven-plugin</artifactId>
-		    <executions>
-		                            <execution>
-						    <id>attach-javadocs</id>
-						    <phase>none</phase>
-<!--                           <goals>
-                                <goal>doc-jar</goal>
-</goals>-->
-		    </execution>
-	    </executions>
+        <plugins>
+            <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <phase>none</phase>
+                        <!--                           <goals>
+                                                        <goal>doc-jar</goal>
+                        </goals>-->
+                    </execution>
+                </executions>
 
-	    </plugin>
-	    </plugins>
+            </plugin>
+        </plugins>
     </build>
 
     <!--
@@ -53,13 +53,13 @@
     -->
 
     <dependencies>
-	    <!-- If scala:doc-jar fails then enable this dependency to see the errors -->
-	    <!--
+        <!-- If scala:doc-jar fails then enable this dependency to see the errors -->
+        <!--
             <dependency>
                 <groupId>org.scala-lang</groupId>
                 <artifactId>scala-library</artifactId>
-	</dependency>
-	    -->
+    </dependency>
+        -->
 
 
         <dependency>
@@ -135,6 +135,17 @@
         <dependency>
             <groupId>net.sansa-stack</groupId>
             <artifactId>sansa-test-resources_2.12</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
             <scope>test</scope>
         </dependency>
 
