--- a/pom.xml
+++ b/pom.xml
@@ -629,6 +629,13 @@
             </dependency>
 
 
+	    <dependency>
+    <groupId>org.glassfish.jersey</groupId>
+    <artifactId>jersey-bom</artifactId>
+    <version>2.35</version>
+    <type>pom</type>
+    <scope>import</scope>
+</dependency>
             <!-- Servlet engines -->
             <!--
                         <dependency>
@@ -746,6 +753,10 @@
                     <exclusion>
                         <groupId>com.sun.jersey</groupId>
                         <artifactId>jersey-server</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.sun.jersey</groupId>
+                        <artifactId>jersey-servlet</artifactId>
                     </exclusion>
 
                     <exclusion>
