--- a/pom.xml
+++ b/pom.xml
@@ -768,11 +768,17 @@
                     <exclusion>
                         <groupId>com.google.guava</groupId>
                         <artifactId>guava</artifactId>
-		</exclusion>
+	    	    </exclusion>
 		<exclusion>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-reload4j</artifactId>
 		</exclusion>
+
+		    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+
                 </exclusions>
             </dependency>
 
@@ -847,15 +853,22 @@
                     <exclusion>
                         <groupId>javax.ws.rs</groupId>
                         <artifactId>javax.ws.rs-api</artifactId>
+		</exclusion>
+		                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
                     </exclusion>
+
                 </exclusions>
             </dependency>
 
+	    <!--
             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
-                <version>2.8.5</version>
-            </dependency>
+                <version>2.9.0</version>
+	    </dependency>
+	    -->
 
             <dependency>
                 <groupId>org.apache.spark</groupId>
