Cleaned up close leak warnings

--- a/sansa-test-resources/src/main/resources/log4j2.properties
+++ b/sansa-test-resources/src/main/resources/log4j2.properties
@@ -7,5 +7,5 @@ appender.console.target = SYSTEM_ERR
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{HH:mm:ss} %-5p %-15c{1} :: %m%n
 
-rootLogger.level = debug
+rootLogger.level = INFO
 rootLogger.appenderRef.stderr.ref = STDERR
