--- a/sansa-pkg-parent/sansa-pkg-docker-cli/pom.xml
+++ b/sansa-pkg-parent/sansa-pkg-docker-cli/pom.xml
@@ -48,14 +48,32 @@
 				<version>3.1.4</version>
 				<configuration>
 					<to>
-					    <!-- TODO Update -->
-						<image>docker.io/sansa/sansa-stack</image>
+					    <!-- TODO We should reuse the AKSW repo as the official one -->
+						<!-- <image>docker.io/sansa/sansa-stack</image> -->
+						<image>docker.io/aklakan/sansa</image>
 					</to>
 					<from>
-						<image>openjdk:alpine</image>
+						<image>eclipse-temurin:11-jre</image>
 					</from>
 					<container>
-						<mainClass>onet.sansa_stack.spark.cli.main.MainCliSansaSpark</mainClass>
+						<mainClass>net.sansa_stack.spark.cli.main.MainCliSansaSpark</mainClass>
+						<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
+    <jvmFlags>
+    <jvmFlag>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmFlag>
+<jvmFlag>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</jvmFlag>
+<jvmFlag>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmFlag>
+<jvmFlag>--add-opens=java.base/java.io=ALL-UNNAMED</jvmFlag>
+<jvmFlag>--add-opens=java.base/java.net=ALL-UNNAMED</jvmFlag>
+<jvmFlag>--add-opens=java.base/java.nio=ALL-UNNAMED</jvmFlag>
+<jvmFlag>--add-opens=java.base/java.util=ALL-UNNAMED</jvmFlag>
+<jvmFlag>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</jvmFlag>
+<jvmFlag>--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED</jvmFlag>
+<jvmFlag>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</jvmFlag>
+<jvmFlag>--add-opens=java.base/sun.nio.cs=ALL-UNNAMED</jvmFlag>
+<jvmFlag>--add-opens=java.base/sun.security.action=ALL-UNNAMED</jvmFlag>
+<jvmFlag>--add-opens=java.base/sun.util.calendar=ALL-UNNAMED</jvmFlag>
+<jvmFlag>--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED</jvmFlag>
+</jvmFlags>
 					</container>
 					<containerizingMode>packaged</containerizingMode>
 				</configuration>
